--- a/src/app/scene-canvas/scene-canvas.component.html
+++ b/src/app/scene-canvas/scene-canvas.component.html
@@ -1,2 +1,4 @@
-<canvas #glCanvas></canvas>
-<div class="fps" style.color={{fpsColor()}}>{{fps | number : '1.0-0'}} fps</div>
+<div class="canvas-container">
+  <canvas #glCanvas></canvas>
+  <div class="fps" style.color={{fpsColor()}}>{{fps | number : '1.0-0'}} fps</div>
+</div>
