--- a/src/app/scene-canvas/scene-canvas.component.css
+++ b/src/app/scene-canvas/scene-canvas.component.css
@@ -1,7 +1,14 @@
-canvas { 
+.canvas-container {
+  position: absolute;
+  right: 0;
+  text-align: right;
+  background-color: black;
+  width: 75%;
+}
+
+canvas {
   height: 100vh; 
-  width: 100vw; 
-  display: block;
+  width: 100%;
 }
 
 .fps {
