--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  background-color: #222222;
+  color: white;
   margin: 0;
   height: 100%;
   overflow: hidden;
