--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <app-scene-canvas [parameters]="parameters"></app-scene-canvas>
-  <app-toolbar [parameters]="parameters" [x]="parameters.x" [y]="parameters.y" (parametersChange)="initialize($event)"></app-toolbar>
+  <app-scene-canvas id="scene-canvas" class="notscrollable" [(parameters)]="parameters"></app-scene-canvas>
+  <app-toolbar class="scrollable" [parameters]="parameters" [x]="parameters.x" [y]="parameters.y" (parametersChange)="initialize($event)"></app-toolbar>
 </div>
 <script>
   if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
