--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,19 +1,70 @@
 <div class="container">
-  <div class="field-container">
-    <span class="before-field">dx</span>
-    <input type="text" class="text-field" [(ngModel)]="x" (input)="checkXY()" (focusout)="submitXY()" (keydown.enter)="blur()">
-    <span *ngIf="error.x" class="error after-textfield">err</span>
+  <div class="field-group">
+    <div class="field-container">
+      <span class="before-field">dx</span>
+      <input type="text" class="text-field" [(ngModel)]="x" (input)="checkXY()" (focusout)="submitXY()" (keydown.enter)="blur()">
+      <span *ngIf="error.x" class="error after-textfield">err</span>
+    </div>
+    <div class="field-container">
+      <span class="before-field">dy</span>
+      <input type="text" class="text-field" [(ngModel)]="y" (input)="checkXY()" (focusout)="submitXY()" (keydown.enter)="blur()">
+      <span *ngIf="error.y" class="error after-textfield">err</span>
+    </div>
   </div>
-  <div class="field-container">
-    <span class="before-field">dy</span>
-    <input type="text" class="text-field" [(ngModel)]="y" (input)="checkXY()" (focusout)="submitXY()" (keydown.enter)="blur()">
-    <span *ngIf="error.y" class="error after-textfield">err</span>
+  <div class="field-group">
+    <div class="field-container">
+      <span id="tlabel" class="before-label">t</span>
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.minT" (ngModelChange)="setMinT($event)" (keydown.enter)="blur()">
+      <input type="range" class="small-slider dark-background-slider" [attr.min]="parameters.minT" [attr.max]="parameters.maxT" step="0.01" [(ngModel)]="parameters.t" (keydown.enter)="blur()">
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.maxT" (ngModelChange)="setMaxT($event)" (keydown.enter)="blur()">
+    </div>
+    <div class="field-container">
+      <span class="before-label">x</span>
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.xRange[0]" (ngModelChange)="setMinX($event)" (keydown.enter)="blur()">
+      <div class="divider range-divider"></div>
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.xRange[1]" (ngModelChange)="setMaxX($event)" (keydown.enter)="blur()">
+    </div>
+    <div class="field-container">
+      <span class="before-label">y</span>
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.yRange[0]" (ngModelChange)="setMinY($event)" (keydown.enter)="blur()">
+      <div class="divider range-divider"></div>
+      <input type="text" class="text-field before-label after-label small-field" [ngModel]="parameters.yRange[1]" (ngModelChange)="setMaxY($event)" (keydown.enter)="blur()">
+    </div>
   </div>
-  <div class="field-container">
-    <input #particleCount type="range" min="100" max="100000" [ngModel]="parameters.particleCount"
-     (ngModelChange)="parameters.particleCount = $event;parametersChange.emit(parameters)" (keydown.enter)="blur()">
-    <label for="particleCount" class="slider-label">Particles</label>
+  <div class="field-group">
+    <div class="field-container inline slider-container slider-left">
+      <app-animated-slider class="app-slider" [value]="parameters.particleCount" (valueChange)="parameters.particleCount = $event;parametersChange.emit(parameters)"
+      [min]="100" [max]="100000" [default]="10000"></app-animated-slider>
+      <div class="app-slider-label">Particles</div>
+    </div>
+    <div class="field-container inline slider-container slider-middle">
+      <app-animated-slider class="app-slider" [(value)]="parameters.speed" [min]="0.01" [max]="10" [default]="1" [color]="'coral'"></app-animated-slider>
+      <div class="app-slider-label">Speed</div>
+    </div>
+    <div class="field-container inline slider-container slider-right">
+      <app-animated-slider class="app-slider textblack" [value]="parameters.lifetime" (valueChange)="parameters.lifetime = $event; parametersChange.emit(parameters)"
+      [min]="1" [max]="1000" [default]="100" [color]="'lightgreen'"></app-animated-slider>
+      <div class="app-slider-label">Lifetime</div>
+    </div>
   </div>
+  <div class="field-container checkbox-field">
+    <input #normalize type="checkbox" [(ngModel)]="parameters.normalize" (keydown.enter)="blur()">
+    <label for="normalize" class="after-label">Normalize</label>
+  </div>
+  <div class="field-container color-picker">
+    <label for="c2" class="before-label">Slow</label>
+    <div class="cp_wrapper">
+      <input #c2 type="color" [(ngModel)]="color2" (change)="submitColors()" (keydown.enter)="blur()">
+    </div>
+  </div>
+  <div class="field-container color-picker after-picker">
+    <label for="c1" class="before-label">Fast</label>
+    <div class="cp_wrapper">
+      <input #c1 type="color" [(ngModel)]="color1" (change)="submitColors()" (keydown.enter)="blur()">
+    </div>
+  </div>
+</div>
+<!-- 
   <div class="field-container">
     <input #speed type="range" min="0.01" max="10" step="0.01" [(ngModel)]="parameters.speed" (keydown.enter)="blur()">
     <label for="speed" class="slider-label">Speed</label>
@@ -24,7 +75,8 @@
     <label for="lifetime" class="slider-label">Lifetime</label>
   </div>
   <div class="field-container">
-    <input #normalize type="checkbox" [(ngModel)]="parameters.normalize" (keydown.enter)="blur()">
-    <label for="normalize" class="checkbox-label">Normalize</label>
+    <input #particleCount type="range" min="100" max="100000" [ngModel]="parameters.particleCount"
+     (ngModelChange)="parameters.particleCount = $event;parametersChange.emit(parameters)" (keydown.enter)="blur()">
+    <label for="particleCount" class="slider-label">Particles</label>
   </div>
-</div>
+-->
