--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,10 @@
 body {
   font-family: 'Lato', sans-serif;
+  font-size: 14px;
   font-weight: 300;
   background-color: #222222;
   color: white;
-  margin: 0;
+  margin: 0 0 30px 0;
   height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
