regex to allow non-float numbers, fullscreen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="container">
+<div class="app-canvas-container">
   <app-scene-canvas id="scene-canvas" class="notscrollable" [(parameters)]="parameters"></app-scene-canvas>
+</div>
+<div class="app-toolbar-container transform-animate" [style.transform]="fullScreen ? 'translate(-100%, 0)' : 'translate(0, 0)'">
   <app-toolbar class="scrollable" [parameters]="parameters" (parametersChange)="parameters = $event;initialize($event)" [x]="parameters.x" [y]="parameters.y" 
   [ranges]="{
     minT: parameters.minT,
@@ -8,12 +10,10 @@
     yRange: [parameters.yRange[0], parameters.yRange[1]]
   }"></app-toolbar>
 </div>
-<script>
-  if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-    // Mobile device style: fill the whole browser client area with the game canvas:
-    var meta = document.createElement('meta');
-    meta.name = 'viewport';
-    meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-    document.getElementsByTagName('head')[0].appendChild(meta);
-  }
-</script>
+<div class="full-screen-button-container" [style.left]="fullScreen ? '10px' : '280px'">
+  <span class="full-screen-button material-symbols-rounded" (click)="toggleFullScreen()"> list </span>
+</div>
+<!-- 
+ style.width="calc(100% - {{fullScreen ? '0px' : '270px'}})"
+ *ngIf="!fullScreen"
+ -->
