--- a/src/app/scene-canvas/scene-canvas.component.css
+++ b/src/app/scene-canvas/scene-canvas.component.css
@@ -1,7 +1,8 @@
-.canvas-container {
+/* .canvas-container {
   position: absolute;
   right: 0;
-  text-align: right;
+  top: 0;
+  text-align: right; 
   background-color: black;
   width: calc(100% - 270px);
 }
@@ -9,7 +10,7 @@
 canvas {
   height: 100vh; 
   width: 100%;
-}
+} */
 
 .fps {
   font-size: medium;
@@ -19,4 +20,7 @@ canvas {
   bottom: 10px;
   text-shadow: 0px 0px 5px black;
   z-index: 1000;
+  background-color: rgba(147, 147, 147, 0.3);
+  border-radius: 5px;
+  padding: 3px 7px;
 }
