--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -32,13 +32,13 @@
 }
 
 .full-screen-button-container {
-  position: absolute;
+  position: fixed;
   top: 10px;
   transition: 310ms left ease-in-out;
 }
 
 .full-screen-button {
-  font-size: 40px;
+  font-size: 35px;
   cursor: pointer;
   text-shadow: 0px 0px 5px black;
   z-index: 1000;
