--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
   }"></app-toolbar>
 </div>
 <div class="full-screen-button-container" [style.left]="fullScreen ? '10px' : '280px'">
-  <span class="full-screen-button material-symbols-rounded" (click)="toggleFullScreen()"> list </span>
+  <span class="full-screen-button material-symbols-rounded" (click)="toggleFullScreen()"> menu </span>
 </div>
 <!-- 
  style.width="calc(100% - {{fullScreen ? '0px' : '270px'}})"
