--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -77,6 +77,10 @@
       <input #c1 type="color" [(ngModel)]="color1" (change)="submitColors(); changeURL()" (keydown.enter)="blur()">
     </div>
   </div>
+  <div class="divider field-divider"></div>
+  <div class="github-text">
+    Checkout <a href="https://github.com/starrfree/vector-field-website" class="github-a">Github</a> for help.
+  </div>
 </div>
 <!-- 
   <div class="field-container">
