added 3rd dimension

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-scene-canvas id="scene-canvas" class="notscrollable" [(parameters)]="parameters"></app-scene-canvas>
 </div>
 <div class="app-toolbar-container transform-animate" [style.transform]="fullScreen ? 'translate(-100%, 0)' : 'translate(0, 0)'">
-  <app-toolbar class="scrollable" [parameters]="parameters" (parametersChange)="parameters = $event;initialize($event)" [x]="parameters.x" [y]="parameters.y" 
+  <app-toolbar class="scrollable" [parameters]="parameters" (parametersChange)="parameters = $event;initialize($event)" [x]="parameters.x" [y]="parameters.y" [z]="parameters.z" 
   [ranges]="{
     minT: parameters.minT,
     maxT: parameters.maxT,
