--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
     minT: parameters.minT,
     maxT: parameters.maxT,
     xRange: [parameters.xRange[0], parameters.xRange[1]],
-    yRange: [parameters.yRange[0], parameters.yRange[1]]
+    yRange: [parameters.yRange[0], parameters.yRange[1]],
+    zRange: [parameters.zRange[0], parameters.zRange[1]]
   }"></app-toolbar>
 </div>
 <div class="full-screen-button-container" [style.left]="fullScreen ? '10px' : '280px'">
