--- a/src/app/scene-canvas/scene-canvas.component.html
+++ b/src/app/scene-canvas/scene-canvas.component.html
@@ -2,5 +2,6 @@
 <div class="canvas-container" style="position: absolute; right: 0; top: 0; text-align: right;
  background-color: black; width: calc(100% - {{canvasWidthOffset}}); transition: 310ms width ease-in-out;">
   <canvas #glCanvas style="height: 100vh; width: 100%;"></canvas>
-  <div class="fps" style.color={{fpsColor()}}>{{fps | number : '1.0-0'}} fps</div>
+  <div class="fps" style.color={{fpsColor}}>{{fps | number : '1.0-0'}} fps</div>
+  <!-- <span style="position: absolute; left: {{xPosition[0]}}px; top: {{xPosition[1]}}px">X</span> -->
 </div>
