added equa-diff tutorial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-<div class="app-canvas-container">
-  <app-scene-canvas id="scene-canvas" class="notscrollable" [(parameters)]="parameters"></app-scene-canvas>
-</div>
-<div class="app-toolbar-container transform-animate" [style.transform]="fullScreen ? 'translate(-100%, 0)' : 'translate(0, 0)'">
-  <app-toolbar class="scrollable" [parameters]="parameters" (parametersChange)="parameters = $event;initialize($event)" [x]="parameters.x" [y]="parameters.y" [z]="parameters.z" 
-  [ranges]="{
-    minT: parameters.minT,
-    maxT: parameters.maxT,
-    xRange: [parameters.xRange[0], parameters.xRange[1]],
-    yRange: [parameters.yRange[0], parameters.yRange[1]],
-    zRange: [parameters.zRange[0], parameters.zRange[1]]
-  }"></app-toolbar>
-</div>
-<div class="full-screen-button-container" [style.left]="fullScreen ? '10px' : '280px'">
-  <span class="full-screen-button material-symbols-rounded" (click)="toggleFullScreen()"> menu </span>
-</div>
-<!-- 
- style.width="calc(100% - {{fullScreen ? '0px' : '270px'}})"
- *ngIf="!fullScreen"
- -->
+<router-outlet></router-outlet>
