--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -87,7 +87,10 @@
   </div>
   <div class="divider field-divider"></div>
   <div class="github-text">
-    Checkout <a href="https://github.com/starrfree/vector-field-website" class="github-a">Github</a> for help.
+    Checkout <a href="https://github.com/starrfree/vector-field-website" target="_blank" rel="noopener noreferrer" class="github-a">Github</a> for help.
+    <br>
+    <br>
+    Visualize differential equations <a href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/help" target="_blank" rel="noopener noreferrer" class="github-a">tutorial</a>
   </div>
 </div>
 <!-- 
