--- a/src/app/scene-canvas/snackbar/snackbar.component.html
+++ b/src/app/scene-canvas/snackbar/snackbar.component.html
@@ -4,6 +4,10 @@
     <a mat-button class="click-button" (click)="navigate()" href="https://vectorfield3d-dot-starfree.ew.r.appspot.com/help" target="_blank" rel="noopener noreferrer">click here</a>
   </div>
   <div class="action">
-    <button mat-raised-button (click)="cancel()">OK</button>
+    <button mat-raised-button (click)="cancel()" class="action-button">
+      <span class="material-symbols-rounded">
+        close
+      </span>
+    </button>
   </div>
 </div>
